@@ -2,7 +2,8 @@ h1. CHANGELOG
 
 h2. 2.2.18 unreleased
 
-* fix 'gems' recipe to add the less-rails gem to accommodate changes to the twitter-bootstrap-rails gem
+* fix 'gems' recipe to include 'database_cleaner' gem when RSpec is selected without Cucumber
+* fix 'gems' recipe to add the 'less-rails' gem to accommodate changes to the' twitter-bootstrap-rails' gem
 * update gem 'mongoid' to 3.0.11
 * update gem 'capybara' to 1.1.3
 * update gem 'email_spec' to 1.4.0
